--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -84,11 +84,12 @@
 
     }
 
+
     .suscripcion {
 
-        @extend %suscripcioncuadro;
+        @extend %suscripcioncuadro; }
 
-    }
+    
 
 
 
