--- a/scss/components/_tienda.scss
+++ b/scss/components/_tienda.scss
@@ -14,6 +14,12 @@ section {
 
     }
 
+    .tiendawrapimagenesdos {
+
+        @include wrapimagenesdostablet; 
+       
+    }
+
    
 
    
@@ -72,11 +78,9 @@ section {
         background-color: #660000;
     }
 
-
     .suscripcion {
 
         @extend %suscripcioncuadro;
-
     }
 
 
