--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 /*imports*/
 header h1 {
-  padding: 20px;
   margin: 0 auto;
-  height: 300px;
-  font-size: 12vw;
+  height: 350px;
+  font-size: 20vw;
   border-bottom: #660000 solid;
   background-color: white;
   text-align: center;
@@ -13,19 +12,20 @@ header h1 a {
   color: #660000;
   font-stretch: expanded;
   font-weight: 900;
-  font-family: "shrimp", sans-serif;
+  font-family: "League Gothic", sans-serif;
+  margin-bottom: 10px;
 }
 header h1 a:hover {
   color: rgb(243, 21, 21);
 }
 @media screen and (max-width: 810px) {
   header h1 {
-    height: 150px;
+    height: 200px;
   }
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 480px) {
   header h1 {
-    height: 110px;
+    height: 150px;
     padding: 10px;
   }
 }
@@ -143,7 +143,7 @@ section .tiendawrapimagenes {
 div marquee {
   font-size: 100pt;
   border-top: 2px #660000 solid;
-  font-family: "shrimp", sans-serif;
+  font-family: "League Gothic", sans-serif;
 }
 @media screen and (max-width: 810px) {
   div marquee {
@@ -156,6 +156,11 @@ footer {
   height: 300px;
   background: rgb(250, 247, 247);
   background: linear-gradient(180deg, rgb(250, 252, 250) 0%, rgba(102, 0, 0, 0.7091036244) 64%);
+}
+footer h2 {
+  text-align: center;
+  margin: 30px;
+  font-family: "League Gothic", sans-serif;
 }
 footer div img {
   width: 40px;
@@ -170,8 +175,10 @@ footer div .col {
 }
 footer div p {
   font-family: "Mukta Malar", sans-serif;
-  color: white;
-  padding-top: 70px;
+  color: black;
+  text-decoration: underline;
+  font-weight: bold;
+  padding-top: 15px;
   font-size: 14pt;
 }
 @media screen and (max-width: 560px) {
@@ -183,8 +190,13 @@ footer div p {
   }
 }
 @media screen and (max-width: 560px) {
+  footer div p {
+    padding-top: 40px;
+  }
+}
+@media screen and (max-width: 560px) {
   footer {
-    height: 200px;
+    height: 350px;
   }
 }
 
@@ -260,7 +272,7 @@ section .tiendawrapimagenes {
 .about-section {
   padding: 50px;
   margin: 10px;
-  text-align: justify;
+  text-align: left;
   color: #660000;
   display: grid;
   grid-template-columns: 3fr 2fr;
@@ -271,14 +283,25 @@ section .tiendawrapimagenes {
   font-size: 20px;
 }
 .about-section .infotext .mainline {
-  font-family: "Durer", sans-serif;
+  font-family: "Yeseva One", sans-serif;
   padding: 10px;
-  font-size: 30px;
+  font-size: 25px;
+  display: inline-block;
+  vertical-align: middle;
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  transition-duration: 0.3s;
+  transition-property: transform;
+}
+.about-section .infotext .mainline:hover, .about-section .infotext .mainline:focus, .about-section .infotext .mainline:active {
+  transform: scale(1.1);
 }
 @media screen and (max-width: 810px) {
   .about-section .infotext .mainline {
     padding: 10px;
-    font-size: 20pt;
+    font-size: 16pt;
     margin-top: 10px;
   }
 }
@@ -295,15 +318,15 @@ section .tiendawrapimagenes {
 }
 @keyframes float {
   0% {
-    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 5px 15px 0px rgba(255, 255, 255, 0.712);
     transform: translatey(0px);
   }
   50% {
-    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 25px 15px 0px rgba(247, 244, 244, 0.377);
     transform: translatey(-20px);
   }
   100% {
-    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 5px 15px 0px rgba(240, 236, 236, 0.623);
     transform: translatey(0px);
   }
 }
@@ -318,12 +341,13 @@ section .tiendawrapimagenes {
 .about-section img {
   width: 400px;
   box-sizing: border-box;
-  border: 5px #660000 solid;
+  border: 5px cyan solid;
   border-radius: 50%;
   overflow: hidden;
   box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
   transform: translatey(0px);
   animation: float 6s ease-in-out infinite;
+  filter: invert(1.1);
 }
 @media screen and (max-width: 810px) {
   .about-section {
@@ -344,20 +368,19 @@ section .tiendawrapimagenes {
   background-repeat: repeat;
   background-size: cover;
   font-family: "Mukta Malar", sans-serif;
-  text-align: justify;
+  text-align: left;
   /*mobile responsive info*/
 }
 .statement h2 {
   margin: 50px;
-  font-family: "Durer";
+  font-family: "Yeseva One";
 }
 .statement h3 {
-  font-family: "Durer";
+  font-family: "Yeseva One";
   margin-top: 50px;
   margin-bottom: 50px;
-  background-color: rgba(255, 255, 255, 0.589);
-  border-radius: 20%;
   padding: 10px;
+  background-color: white;
 }
 .statement #statementtext {
   width: 100%;
@@ -368,7 +391,6 @@ section .tiendawrapimagenes {
   margin-bottom: 30px;
   background-color: rgba(255, 255, 255, 0.856);
   padding: 25px;
-  border-radius: 25%;
   font-size: 16pt;
 }
 @media screen and (max-width: 480px) {
@@ -599,7 +621,7 @@ section ul .storesubcontent {
 section .card {
   border: 2px #660000 solid;
   margin-bottom: 20px;
-  font-family: "Durer";
+  font-family: "Mukta Malar";
   font-weight: bold;
 }
 section .btn {
@@ -673,18 +695,17 @@ section .tiendawrapimagenes {
 .formulario {
   padding: 20px;
   border: 2px solid #660000;
-  font-family: "Durer";
-  font-size: 20pt;
-  font-weight: bold;
+  font-size: 16pt;
   color: black;
   border-radius: 2%;
   box-shadow: 0px 3px 28px 0px rgba(0, 0, 0, 0.75);
 }
 .formulario .enviarbt {
   margin-bottom: 50px;
+  margin-top: 10px;
 }
 .formulario .enviarbt a {
-  font-size: 30pt;
+  font-size: 20pt;
 }
 @media screen and (max-width: 415px) {
   .formulario .enviarbt a {
@@ -695,8 +716,9 @@ section .tiendawrapimagenes {
   padding-top: 40px;
   color: #660000;
   font-weight: bold;
-  font-family: "Yeseva One";
+  font-family: "League Gothic", sans-serif;
   text-shadow: 1px 1px white;
+  font-size: 50pt;
 }
 .formulario ul li #contact-form {
   color: white;
@@ -774,6 +796,7 @@ section .tiendawrapimagenes {
   font-weight: 600;
 }
 
+/* section de tienda */
 .tienda-section .tiendatext {
   background-color: rgba(255, 255, 255, 0.274);
   border-radius: 10%;
@@ -814,7 +837,7 @@ section .tiendawrapimagenes {
   padding-bottom: 400px;
   display: flex;
   justify-content: center;
-  font-family: "Durer";
+  font-family: "League Gothic", sans-serif;
   background-image: url(../pictures/imgconstrucc.JPG);
   background-repeat: repeat-x;
   background-position: center;
@@ -825,8 +848,8 @@ section .tiendawrapimagenes {
 }
 .mensajecons .color-overlay h1 {
   text-shadow: 3px 3px 3px white;
-  font-size: 100pt;
-  font-weight: 800;
+  font-size: 80pt;
+  font-weight: 500;
   color: #660000;
   background-color: rgba(255, 255, 255, 0.473);
   margin: 10px;
@@ -957,6 +980,7 @@ section .tiendawrapimagenes {
   flex: 50%;
   font-size: 16pt;
   margin-top: 100px;
+  margin-bottom: 50px;
 }
 @media screen and (max-width: 810px) {
   .obratext {
