--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -5,27 +5,19 @@
 
     padding: 20px;
     border: 2px solid #660000;
-    
-    font-family: 'Durer';
-    font-size: 20pt;
-    font-weight: bold;
+    font-size: 16pt;
     color: black;
     border-radius: 2%;
     box-shadow: 0px 3px 28px 0px rgba(0,0,0,0.75);
 
-
-
-
-
     .enviarbt {
 
         margin-bottom: 50px;
-
+        margin-top: 10px;
 
         a {
 
-
-            font-size: 30pt;
+            font-size: 20pt;
 
             @media screen and (max-width: 415px) {
 
@@ -34,12 +26,8 @@
                 
             }
 
-
-
-
         }
        
-
     }
 
     h2 {
@@ -47,8 +35,10 @@
         padding-top: 40px;
         color: #660000;
         font-weight: bold;
-        font-family: 'Yeseva One';
+        font-family: 'League Gothic', sans-serif;
         text-shadow: 1px 1px white;
+        font-size: 50pt;
+        
 
     }
 
@@ -73,13 +63,10 @@
 
 
 
-
             }
 
 
         }
-
-
 
 
     }
@@ -90,7 +77,5 @@
         @extend %suscripcioncuadro; }
 
     
-
-
 
 }
