--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -4,9 +4,9 @@ header {
 
     h1 {
 
-        padding: 20px;
+       
         margin: 0 auto;
-        height: 300px;
+        height: 350px;
         font-size: $header-text-size;
         border-bottom: #660000 solid;
         background-color: white;
@@ -22,7 +22,8 @@ header {
 
             font-stretch: expanded;
             font-weight: 900;
-            font-family: 'shrimp', sans-serif;
+            font-family: 'League Gothic', sans-serif;
+            margin-bottom: 10px;
             
         
         }
@@ -32,12 +33,12 @@ header {
 
         @media screen and (max-width: 810px) {
 
-            height: 150px;
+            height: 200px;
         }
 
-        @media screen and (max-width: 415px) {
+        @media screen and (max-width: 480px) {
 
-            height: 110px;
+            height: 150px;
             padding: 10px;
             
             
